--- a/elimu_yangu/leaguetable/templates/leaguetable/profile/head2head.html
+++ b/elimu_yangu/leaguetable/templates/leaguetable/profile/head2head.html
@@ -38,6 +38,8 @@
                         <li><a href="/university-finder">UNI FINDER</a></li>
                         <li><a href="/about">ABOUT</a></li>
                         <li><a href="/contact">CONTACT US</a></li>
+                        <li><a href="/sw">sw</a></li>
+                        <li><a href="/en">en</a></li>
                     </ul>
                 </div>
             </div>
