--- a/elimu_yangu/templates/homepage.html
+++ b/elimu_yangu/templates/homepage.html
@@ -61,38 +61,38 @@
   * Testimonial
   * =================================
   -->
-  <section id="testimonial" class="testimonial-area">
+  <!-- <section id="testimonial" class="testimonial-area">
   <div class="container">
       <div class="row">
           <div class="col-md-8 col-md-offset-2">
               <h2 class="title text-center">{%trans 'WHAT THEY SAY ABOUT US' %}</h2>
               <div class="testimonial-list">
-                  <!-- START SINGLE TESTIMONIAL DESIGN AREA -->
+                   START SINGLE TESTIMONIAL DESIGN AREA
                   <div class="single-testimonial text-center">
                       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s Lorem Ipsum.</p>
                       <h2>John Doe</h2>
                       <h3>{%trans 'On' %} Career Guide</h3>
                   </div>
-                  <!-- / END SINGLE TESTIMONIAL DESIGN AREA -->
-                  <!-- START SINGLE TESTIMONIAL DESIGN AREA -->
+                   / END SINGLE TESTIMONIAL DESIGN AREA
+                   START SINGLE TESTIMONIAL DESIGN AR
                   <div class="single-testimonial text-center">
                       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s Lorem Ipsum.</p>
                       <h2>Jessica malcova</h2>
                       <h3>CEO facebook</h3>
                   </div>
-                  <!-- / END SINGLE TESTIMONIAL DESIGN AREA -->
-                  <!-- START SINGLE TESTIMONIAL DESIGN AREA -->
+                   / END SINGLE TESTIMONIAL DESIGN AREA
+                  TART SINGLE TESTIMONIAL DESIGN AREA
                   <div class="single-testimonial text-center">
                       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s Lorem Ipsum.</p>
                       <h2>Jessica malcova</h2>
                       <h3>CEO facebook</h3>
                   </div>
-                  <!-- / END SINGLE TESTIMONIAL DESIGN AREA -->
+                  / END SINGLE TESTIMONIAL DESIGN AREA
               </div>
           </div>
       </div>
   </div>
-  </section>
+  </section> -->
 </div>
     <!-- <div class="showcase clearfix partners {{ extra_css_class }}">
         <div class="wrapper text-center">
