--- a/elimu_yangu/templates/homepage_country.html
+++ b/elimu_yangu/templates/homepage_country.html
@@ -27,13 +27,31 @@
     #page-footer {
         background: #2E4668;
         padding: 10px 30px 30px;
+        text-align: left;
+    }
+    #page-footer div{
+        text-align: left;
     }
     #page-footer img {
       max-height: 100%;
       margin: 0;
     }
+    #page-footer .list-group {
+      padding: 10px;
+      text-align: left;
+    }
+    #page-footer .list-group-item {
+      padding: 0px 10px;
+    }
     #page-footer ul a {
-      text-decoration: none;
+      text-decoration: underline;
+      color: #fff;
+      font-size: .9em;
+    }
+    #page-footer ul a:hover {
+      text-decoration: underline;
+      color: #fff;
+      font-size: .9em;
     }
     #page .bg-ocean-green {
           background-color: #2E4668
