--- a/elimu_yangu/leaguetable/templates/leaguetable/embed_map.html
+++ b/elimu_yangu/leaguetable/templates/leaguetable/embed_map.html
@@ -27,7 +27,7 @@
                     {% if geography.parents %}
                         in
                         {% for level, g in geography.parents.items %}
-                            <a href="/profiles/{{ g.full_geoid }}-{{ g.short_name|slugify }}/">{{ g.short_name }}</a>{% if not forloop.last %},{%endif%}
+                            <a href="/leaguetable/profiles/{{ g.full_geoid }}-{{ g.short_name|slugify }}/">{{ g.short_name }}</a>{% if not forloop.last %},{%endif%}
                         {% endfor %}
                     {% endif %}
                     </p>
