--- a/elimu_yangu/leaguetable/templates/leaguetable/profile/profile_detail.html
+++ b/elimu_yangu/leaguetable/templates/leaguetable/profile/profile_detail.html
@@ -38,8 +38,21 @@
                       <li><a href="/careerguide">CAREER GUIDE</a></li>
                       <li><a href="/university-finder">UNI FINDER</a></li>
                       <li><a href="/about">ABOUT</a></li>
-                      <li><a href="/sw">sw</a></li>
-                      <li><a href="/en">en</a></li>
+                      <li>
+                        <form action="{% url 'set_language' %}" method="post">{% csrf_token %}
+                          <input name="next" type="hidden" value="{{ redirect_to }}" />
+                          {% get_current_language as LANGUAGE_CODE %}
+                          {% ifequal LANGUAGE_CODE "en" %}
+                              <!-- {{ language.name_local }} ({{ language.code }}) -->
+                            <input type="hidden" name="language" value="sw" />
+                            <input type="image" value="submit" src="{% static 'img/tz.png' %}" style="padding-top: 17px;" />
+                          {% else %}
+                            <input  type="hidden" name="language" value="en" />
+                            <input type="image" value="submit" src="{% static 'img/us.png' %}" style="padding-top: 17px;" />
+                          {% endifequal %}
+                          <!-- </select> -->
+                        </form>
+                      </li>
                       <!-- <li><a href="/contact">CONTACT US</a></li> -->
                   </ul>
               </div>
@@ -70,6 +83,18 @@
             </div>
         </section>
         <div class="col-md-12">
+          <div class="help-text text-center">{%trans 'SCHOOL RANKINGS' %}
+            <span>
+              <select id="rank-year-profile" class="inline-select" style="color: #D0A331">
+                    <option data-language={{ LANGUAGE_CODE }} value="2017">2017</option>
+                    <option data-language={{ LANGUAGE_CODE }} value="2016">2016</option>
+                    <option data-language={{ LANGUAGE_CODE }} value="2015">2015</option>
+                    <!-- <option value="2014">2014</option>
+                    <option value="2013">2013</option>
+                    <option value="2012">2012</option> -->
+                </select>
+              </span>
+            </div>
 
             <!--
             * =================================
@@ -82,7 +107,7 @@
                 <ul id="best-40" class="list-group school">
                   {% for school in schools.best_schools_more_40|slice:":10" %}
                     <li class="list-group-item">
-                        <a href="leaguetable/schools/{{ school.code }}">
+                        <a href="/leaguetable/schools/{{ school.code }}">
                             <div class="col-xs-5">
                                 <div class="school-name">{{ school.name | title }} School</div>
                                 <div class="school-type">{{ school.gender | title }}</div>
@@ -110,7 +135,7 @@
                 <ul id="worst-40" class="list-group school">
                   {% for school in schools.worst_schools_more_40|slice:":10" %}
                   <li class="list-group-item">
-                      <a href="leaguetable/schools/{{ school.code }}">
+                      <a href="/leaguetable/schools/{{ school.code }}">
                           <div class="col-xs-5">
                               <div class="school-name">{{ school.name | title }} School</div>
                               <div class="school-type">{{ school.gender | title }}</div>
@@ -142,7 +167,7 @@
                 <ul id="best" class="list-group school">
                   {% for school in schools.best_schools_less_40|slice:":10" %}
                   <li class="list-group-item">
-                      <a href="leaguetable/schools/{{ school.code }}">
+                      <a href="/leaguetable/schools/{{ school.code }}">
                           <div class="col-xs-5">
                               <div class="school-name">{{ school.name | title }} School</div>
                               <div class="school-type">{{ school.gender | title }}</div>
@@ -170,7 +195,7 @@
                 <ul id="worst" class="list-group school">
                   {% for school in schools.worst_schools_less_40|slice:":10" %}
                   <li class="list-group-item">
-                      <a href="leaguetable/schools/{{ school.code }}">
+                      <a href="/leaguetable/schools/{{ school.code }}">
                           <div class="col-xs-5">
                               <div class="school-name">{{ school.name | title }} School</div>
                               <div class="school-type">{{ school.gender | title }}</div>
