--- a/elimu_yangu/templates/footer.html
+++ b/elimu_yangu/templates/footer.html
@@ -24,23 +24,27 @@
         </div>
         <div class="col-sm-6 text-center margin-top footer-link">
             <div class="col-xs-6">
-
-                <div>{%trans 'RESOURCES' %}</div>
-                <ul class="list-group">
-                    <li class="list-group-item"><a href="https://pesacheck.org" target="_blank">PesaYetu</a></li>
-                    <li class="list-group-item"> <a href="https://facebook.com/HacksHackersAfrica" target="_blank">Hacks/Hackers Africa</a></li>
-                    <!-- <li class="list-group-item"> <a href="#">Link 3</a></li>
-                    <li class="list-group-item"> <a href="#">Link 4</a></li> -->
-                </ul>
+              	<div>{%trans 'Other Projects' %}</div>
+              	<ul class="list-group">
+              		<li class="list-group-item"><a href="https://tanzania.hurumap.org/">HURUmap Tanzania</a></li>
+                  <li class="list-group-item"><a href="https://pesacheck.org" target="_blank">PesaYetu</a></li>
+              		<li class="list-group-item"><a href="http://www.opendata.go.tz">Open Data TZ</a></li>
+              	</ul>
+              	<div>{% trans 'Join our community' %}</div>
+              	<ul class="list-group">
+              		<li class="list-group-item"><a href="https://facebook.com/HacksHackersAfrica">HacksHackers Africa</a></li>
+              	</ul>
             </div>
             <div class="col-xs-6">
-              <div class="col-xs-12">
-                <img class="img-fluid img-thumbnail" src="{% static 'img/cfafrica-white.png' %}" />
-              </div>
-              <div class="col-xs-12" style="padding-top: 10px;">
+              <!-- <div class="col-xs-12"> -->
+              <a href="https://codefortanzania.org/" target="_blank" rel="noopener">
+                <img class="img-fluid img-thumbnail" src="{% static 'img/logos/cftanzania-white.png' %}" />
+              </a>
+              <!-- </div> -->
+              <!-- <div class="col-xs-12" style="padding-top: 10px;">
                 <a href="https://datazetu.or.tz/" target="_blank" rel="noopener">
                     <img class="img-fluid img-thumbnail" src="{{ STATIC_URL }}img/logos/datazetu.png" alt="Data Zetu"></a>
-              </div>
+              </div> -->
             </div>
         </div>
     </div>
