--- a/elimu_yangu/universityfinder/templates/index.html
+++ b/elimu_yangu/universityfinder/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'homepage_country.html' %}{% load i18n %}{% load humanize partition staticfiles %}
 
 {% block head_title %}University Finder{% endblock %}
-
+{% get_current_language as LANGUAGE_CODE %}
 {% block content_container %}
 <div class="main-content">
 
@@ -70,7 +70,7 @@
                     </div>
                 </div>
 
-                <div class="tab-pane" id="step2">
+                <div class="tab-pane" id="step2" data-language={{ LANGUAGE_CODE }} >
                     <div id="prefered-courses"></div>
                     <div type="button" class="add-box-item" data-toggle="modal" data-target="#courseModal">
                         <span>{%trans 'Add Course' %}</span>
