--- a/elimu_yangu/leaguetable/templates/leaguetable/specific_school.html
+++ b/elimu_yangu/leaguetable/templates/leaguetable/specific_school.html
@@ -89,42 +89,63 @@
     </div>
 </div>
 {% endblock %}
+<div class="container">
+    <div class="row">
+        <div class="chart-box col-xs-12">
+            <div class="col-xs-12 chart-header">
+                <div class="col-sm-6">
+                    <div class="col-xs-12">
+                        <h4>Performance</h4>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="col-xs-5">
+                        <div class="school-name">{{ school.name | title }} Secondary School </div>
+                        <div class="school-type">{{ school.gender | title }}</div>
+                    </div>
+                    <div class="col-xs-5">
+                        <div class="school-rank">#{{ school.national_rank_all }} in Tanzania</div>
+                        <div class="school-rank">#{{ school.regional_rank_all }} in Morogoro</div>
+                    </div>
+                    <div class="col-xs-2">
+                        {{ school.avg_gpa }} GPA
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 chart">
+                <img src="/images/chart.png" >
+            </div>
+            <div class="col-xs-12">
+                <div class="col-xs-8">
+                    {% if school.more_than_40 == "yes" %}
+                        <h4>Centre with 40 students or more</h4>
+                      {%else%}
+                      <h4>Centre with less than 40 students</h4>
+                      {% endif %}
+                </div>
+                <div class="col-xs-2">
+                    <h5>{{ school.ownership }}</h5>
+                </div>
+                <div class="col-xs-2">
+                    <h5>{{ school.avg_gpa }}</h5>
+                </div>
+            </div>
+            <div class="col-xs-12">
+                <div class="col-xs-6">
+                    <p> The school was founded in 1992 under the leadership od the local clan commitee. Pellentesque feugiat urna a lectus consequat, quis vulputate nunc feugiat. </p>
+                    <p> Fusce non augue ligula. Ut sed ultrices lacus. Quisque pharetra nisl apulvinar dictum.</p>
+                </div>
+            </div>
+         </div>
+    </div>
 </div>
 {% endblock %}
 
+
+
 {% block profile_preamble %}
-    <div class="clearfix wrapper" style="min-height: 300px;">
-        <br />
-        <h2><i class="fa fa-bar-chart"></i>&nbsp;&nbsp;&nbsp;Stats</h2>
-        <hr />
-        <br/><br />
-
-        <div class="column-third">
-            <h3>{{ school.ownership }}</h3>
-            <h3>Ownership</h3>
-        </div>
-
-        <div class="column-third">
-            <h3>{{ school.pass_rate }}</h3>
-            <h3>Pass Rate</h3>
-        </div>
-
-        <div class="column-third">
-            <h3>{{ school.avg_gpa }}</h3>
-            <h3>Average GPA</h3>
-        </div>
-    </div>
-    <br />
-    <br />
 {% endblock %}
 
 {% block profile_detail %}
-    <div class="clearfix wrapper" style="min-height: 500px;">
-        <br />
-        <h2><i class="fa fa-bar-chart"></i>&nbsp;&nbsp;&nbsp;Performance Trend</h2>
-        <hr />
-        <br/><br />
-    </div>
-    <br />
-    <br />
 {% endblock %}
+</div>
