--- a/wajibisha/static/css/wajibisha.css
+++ b/wajibisha/static/css/wajibisha.css
@@ -10,7 +10,7 @@ body {
     margin: 0 auto; } }
 
 #page-footer {
-  background-color: #0067a3; }
+  background: linear-gradient(to right bottom, #0067A3, #0066A2, #005688); }
 
 .mission {
   background-color: white;
@@ -46,7 +46,7 @@ body {
   /*-webkit-clip-path: polygon(0 0, 100% 0, 100% 46%, 0% 100%);
   clip-path: polygon(0 0, 100% 0, 100% 46%, 0% 100%);*/
   background-color: #0067a3;
-  height: 250px;
+  height: 280px;
   color: white;
   text-align: center;
   padding-top: 50px;
@@ -54,7 +54,7 @@ body {
   z-index: 100;
   transform-origin: -40px;
   transform: skewY(-6deg);
-  box-shadow: 0 4px 2px -2px gray; }
+  box-shadow: 0 4px 2px -2px #b7b7b7; }
   .clipped-header .wrapper {
     position: absolute;
     left: 0;
@@ -68,32 +68,9 @@ body {
     z-index: 1003;
     height: 200px;
     position: absolute;
-    right: 0;}
+    right: 0; }
 
-.promises-header {
-  background-color: #0067a3;
-  height: 300px;
-  color: white;
-  text-align: center;
-  padding-top: 50px;
-  position: relative;
-  z-index: 100;
-  box-shadow: 0 4px 2px -2px gray;}
-  .promises-header .wrapper {
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    z-index: 103; }
-  .promises-header .wrapper .presentation-img {
-    z-index: 1003;
-    height: 200px;
-    position: absolute;
-    right: 0; 
-    top: 0;}
-
-.showcase h2 {
+.showcase h4 {
   color: #0067a3; }
 
 .space {
@@ -129,18 +106,22 @@ body {
 
 .input-group-btn {
   position: relative;
-  top: 5px;
+  top: 6.5px;
   z-index: 999;
   margin-left: -190px; }
 
 .input-group > .form-control {
-  height: 3.4rem;
+  height: 3.6rem;
   border-color: darkgrey;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); }
 
-.team {
-  height: 250px;
-  margin: 3rem;
-  border-color: #B7E4FF;
-  padding: 0; }
+input.form-control.form-control-lg.rounded::placeholder {
+  color: #d4d4d4;
+  padding-left: 2rem;
+  font-size: 0.8rem;
+  top: 6px; }
+
+select.form-control.form-control-lg {
+  color: white; }
+
 /*# sourceMappingURL=../../../../../../../../static/css/wajibisha.css.map */
