--- a/wajibisha/static/css/wajibisha.scss
+++ b/wajibisha/static/css/wajibisha.scss
@@ -20,7 +20,7 @@ body {
 }
 
 #page-footer {
-  background-color: $color-blue;
+  background: linear-gradient(to right bottom, #0067A3, #0066A2, #005688);
 }
 
 .mission {
@@ -64,7 +64,7 @@ body {
   /*-webkit-clip-path: polygon(0 0, 100% 0, 100% 46%, 0% 100%);
   clip-path: polygon(0 0, 100% 0, 100% 46%, 0% 100%);*/
   background-color: $color-blue;
-  height: 250px;
+  height: 280px;
   color: white;
   text-align: center;
   padding-top: 50px;
@@ -72,7 +72,7 @@ body {
   z-index: 100;
   transform-origin: -40px;
   transform: skewY(-6deg);
-  box-shadow: 0 4px 2px -2px gray;
+  box-shadow: 0 4px 2px -2px #b7b7b7;
 
   .wrapper {
     position: absolute;
@@ -93,7 +93,7 @@ body {
   }
 
 }
-.showcase h2 {
+.showcase h4 {
   color:#0067a3;
 }
 
@@ -138,12 +138,22 @@ body {
 
 .input-group-btn {
   position: relative;
-  top: 5px;
+  top: 6.5px;
   z-index: 999;
   margin-left: -190px;
 }
 .input-group>.form-control{
-  height: 3.4rem;
+  height: 3.6rem;
   border-color: darkgrey;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
+input.form-control.form-control-lg.rounded::placeholder {
+    color: #d4d4d4;
+    padding-left:2rem;
+    font-size:0.8rem;
+    top: 6px;
+}
+select.form-control.form-control-lg {
+  color:white;
+}
+
