--- a/wajibisha/templates/_base.html
+++ b/wajibisha/templates/_base.html
@@ -23,10 +23,9 @@
 
 
 {% block header_menu %}
-    <li><a href="/promises">Promise Tracker</a></li>
-    <li><a href="/articles">Articles</a></li>
-    <li><a href="/about">About</a></li>
-    <li><a href="/contact">Contact</a></li>
+    <li class="pl-5"><a href="/promises">Promise Tracker</a></li>
+    <li class="pl-5" ><a href="/articles">Articles</a></li>
+    <li class="pl-5"><a href="/about">About</a></li>
 
 {% endblock header_menu %}
 
