--- a/wajibisha/templates/blocks/team.html
+++ b/wajibisha/templates/blocks/team.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}
 <div class="showcase how-it-works text-center" style="height:;width:100%;">
   <div class="wrapper clearfix text-center">
-   <h2>Team</h2>
+   <h2 style="color:#0067A3;">Team</h2>
    <!--start a first card group-->
   <div class='team card-group'>
     <div class="team card text-center">
