--- a/wajibisha/templates/blocks/tweets.html
+++ b/wajibisha/templates/blocks/tweets.html
@@ -1,10 +1,10 @@
 {% load staticfiles %}
 <section class="tweet-section" style="width:100%;height:auto;">
-<div class=" container pt-5 pb-5" >
-  <div class="d-flex justify-content-center"><h3>Latest tweets<h3></div>
-	<div class="row pt-5 pb-5">
-		<div class="card-group pb-5">
-			<div class="tweet-card card border rounded" >
+<div class=" container pb-5 pt-5">
+  <div class="pt-0 d-flex justify-content-center" style="color:#707070;"><h3>Latest tweets<h3></div>
+	<div class="row">
+		<div class="card-group pb-2" style="color:#707070;">
+			<div class="tweet-card card border rounded" style="border-color:#bfd9e8!important;">
         <div class="d-flex flex-row">
           <div class="pl-2 pt-4"><img class="rounded-circle" src="http://via.placeholder.com/70x70" alt="image one"></div>
           <div class="pl-3 pr-2 pt-4">
@@ -17,7 +17,7 @@
           </div>
         </div>   
       </div>
-      <div class="tweet-card card border rounded" >
+      <div class="tweet-card card border rounded" style="border-color:#bfd9e8!important;">
         <div class="d-flex flex-row">
           <div class="pl-2 pt-4"><img class="rounded-circle" src="http://via.placeholder.com/70x70" alt="image one"></div>
           <div class="pl-3 pr-2 pt-3 pt-4">
@@ -30,7 +30,7 @@
           </div>
         </div> 
       </div>
-      <div class="tweet-card card border rounded">
+      <div class="tweet-card card border rounded" style="border-color:#bfd9e8!important;">
         <div class="d-flex flex-row">
           <div class="pl-2 pt-4"><img class="rounded-circle" src="http://via.placeholder.com/70x70" alt="image one"></div>
           <div class="pl-3 pr-2 pt-4">
@@ -45,18 +45,6 @@
       </div>
     </div>
   </div>
-  <div class="d-flex justify-content-center pt-5 pb-5"><hr align="center" width="32%" style="border-color:black;"></div>
-  <h4 class="text-center pt-5">Sign up for weekly for weekly tracker updates in your inbox below.</h4>
-  <form class="form-inline justify-content-center pt-5">
-    <div class="col-lg-8 center-block">
-      <div class="input-group input-group-lg rounded">
-        <input type="text" class="form-control form-control-lg rounded" placeholder="hello@example.com">
-        <span class="input-group-btn">
-          <button class="btn btn-md btn-primary" type="button" style="background-color:#0067a3;width:180px;border-color:#0067a3;font-size:1.2rem;font-weight:100;border-radius:4px;">SUBCRIBE</button>
-        </span>
-      </div>
-    </div>
-  </form>
 </div>
 </div>
 </section>
