--- a/wajibisha/templates/promises.html
+++ b/wajibisha/templates/promises.html
@@ -6,7 +6,7 @@
 <div class="promises-header clearfix">
 	<div class="wrapper content-container">
 		<div class="column-third text-left">
-			<h2>Promises</h2>
+			<h2>Nairobi</h2>
 			<div>
 				<p style="margin:0;">Population: 3,138,369</p>
 				<p>Area: 696 sq.km</p>
@@ -14,14 +14,29 @@
 			<p>Censes data: 2009</p>
 		</div>
 		<div class="column-third">
-			<div class="form-group">
+      <div id="custom-search-input">
+        <div class="row">
+          <div class="col-md-12">
+            <span class="input-group-btn">
+               <i class="fa fa-search" aria-hidden="true"></i> 
+            </span> 
+            <input class="search-query form-control form-control-lg" placeholder="Search" type="text">
+          </div>
+          </div>
+        </div>
+			<!--<div class="form-group">
 				<input type="text" class="form-control form-control-lg border-right-5" id="validationDefault03" 
 				placeholder=" Search" required >
-			</div>
+			</div>-->
 		</div>
-		<div class="column-third push-right">
-			<img src="http://via.placeholder.com/30x30" class="presentation-img rounded-circle">
-		</div>
+    <div class="column-third text-right">
+        <img src="{% static 'img/profiles/mike-sonko.jpg' %}" class="rounded-circle" height="150px;"> 
+        <div>
+          <p class="pb-0"><b>Governor : </b> Mike Sonko</p>
+        <p class="pt-0"><b>Days in Office:</b> 138</p>
+        <p class="pb-0">Term: 1ST</p>
+      </div>
+    </div>
 	</div>
 </div>
 <div class="container p-0" style="height:350px;width:100%;max-width:1480px;">
@@ -34,105 +49,278 @@
   <div class="wrapper clearfix">
     <h2>All the promises</h2>
     <br/>
-
   </div>
-
   <div class="container">
     <div class="row d-flex flex-row justify-content-end pb-5" style="color:#006699;">
       <p class="small pt-3 pb-3">Group by:</p>
       <div class="btn-group pl-4 pr-5" role="group" aria-label="Group by"">
-        <button type="button" class="btn" style="width:100px;">Status</button>
-        <button type="button" class="btn" style="width:100px;">Category</button>
-      </div>
-
-    </div>
-	<div class="row pt-5">
-    <!--start of card-->
-    <div class="col-4">
-      <div class="card p-0" style="width:300px;margin:10px;">
-        <div class="d-flex flex-row" style='height:150px;'>
-          <div class="justify-content-left">
-            <img class="card-img p-0" src="{% static 'img/tracker/categories/Health.svg' %}" style="height:150px;width:180px;margin-top:-3rem;padding-left:0;">
-          </div>
-          <div class="justify-content-right pt-3" >
-            <p class="text-small pr-2">14 Promises</p>
-            <p class="text-small pr-2">7% Complete</p>
-          </div>
-        </div>
-        <div class="card-block border" style="background-color:#ededed;height:200px;width:320px;margin-left:-10px;border-color:rgba(112, 112, 112, 0.2);">
-          <div class="flex-row d-flex pl-5">
-            <p class="pl-5">1<br> Fulfilled </p>
-            <p class="pl-5">13 <br> Unfufilled </p>
-          </div>
-          <div class="flex-row d-flex pl-5">
-            <p class="pl-5">0 <br> In Progress</p>
-            <p class="pl-4">0 <br> Stalled </p>
-          </div>
-        </div>
-        <div class="d-flex flex-row card-footer">
-          <p class="offset-1"><i class="fa fa-share-alt" aria-hidden="true">Share</i></p>
-          <p class="offset-4"><i class="fa fa-eye" aria-hidden="true">Watch</i></p>
-        </div>
+        <button type="button" class="btn btn-primary pl-4 pr-3 border-2" style="border-top-left-radius:50px;border-bottom-left-radius:50px;border-color:#0067A3;background-color:#0067A3;">STATUS</button>
+        <button type="button" class="btn pr-4 border-2" disabled style="border-top-right-radius:50px;border-bottom-right-radius:50px;border-color:#808080;background-color:#f9f9f9!important;">CATEGORY</button>
       </div>
     </div>
 
-    <!--start of second card-->
-    <div class="col-4">
-    <div class="card p-0" style="width:300px;margin:10px;">
-        <div class="d-flex flex-row" style='height:150px;'>
-          <div class="justify-content-left">
-            <img class="card-img p-0" src="{% static 'img/tracker/categories/Housing.svg' %}" style="height:150px;width:180px;margin-top:-3rem;padding-left:0;">
+    <div class="row pt-5">
+      <!--start of card-->
+      <div class="col-4">
+        <div class="card p-0" style="width:300px;margin:10px;color:#707070;">
+          <div class="d-flex flex-row" style='height:150px;'>
+            <div class="col-6 p-0">
+              <img class="card-img p-0" src="{% static 'img/tracker/categories/Health.svg' %}" style="height:150px;width:180px;margin-top:-2rem;padding-left:0;">
+            </div>
+            <div class="col-6 p-0">
+              <div class="">
+                <p class="lead pr-5"><b class="text-large">14 </b><span style="font-size:14px;"> Promises</span></p>
+                <p class="lead pt-0 pr-4"><b style="font-size:28px;">7% </b><span style="font-size:14px;"> Complete</span></p>
+              </div>
+            </div>
           </div>
-          <div class="justify-content-right pt-3" >
-            <p class="text-small pr-2">14 Promises</p>
-            <p class="text-small pr-2">7% Complete</p>
+
+          <div class="card-block border" style="background-color:#ededed;height:200px;width:320px;
+          margin-left:-10px;border-color:rgba(112, 112, 112, 0.2);">
+            <div class="d-flex flex-row">
+              <div class="justify-content-start" style="font-weight:300;">
+                <p class="pl-4"><b>1</b></p>
+                <p class="pl-4 pt-2 ml-5">Fulfilled</p>
+                <p class="pl-4"><b>0</b></p>
+                <p class="pt-2 pl-4 ml-5">In Progress</p>
+              </div>
+              <div class="justify-content-end offset-1"  style="font-weight:300;">
+                <p><b>13</b><br></p>
+                <p class="pt-2 pl-5">Unfulfilled</p>
+                <p><b>0</b><br></p>
+                <p class="pt-2 pl-4">Stalled</p>
+              </div>
+            </div>
           </div>
+
+          <div class="d-flex flex-row pb-3 pt-3">
+            <p class="pt-0 mr-auto">
+              <img src="{% static 'img/tracker/Share.svg' %}" height="15px" width="15px"> 
+              <span >Share</span></p>
+            <p class="pt-0"><img src="{% static 'img/tracker/Watch.svg' %}" height="15px" width="15px"> Watch</p>
         </div>
-        <div class="card-block border" style="background-color:#ededed;height:200px;width:320px;margin-left:-10px;border-color:rgba(112, 112, 112, 0.2);">
-          <div class="flex-row d-flex pl-5">
-            <p class="pl-5">1<br> Fulfilled </p>
-            <p class="pl-5">13 <br> Unfufilled </p>
-          </div>
-          <div class="flex-row d-flex pl-5">
-            <p class="pl-5">0 <br> In Progress</p>
-            <p class="pl-4">0 <br> Stalled </p>
-          </div>
         </div>
-        <div class="d-flex flex-row card-footer">
-          <p class="offset-1"><i class="fa fa-share-alt" aria-hidden="true">Share</i></p>
-          <p class="offset-4"><i class="fa fa-eye" aria-hidden="true">Watch</i></p>
+      </div>
+<!--second column-->
+      <div class="col-4">
+        <div class="card p-0" style="width:300px;margin:10px;color:#707070;">
+          <div class="d-flex flex-row" style='height:150px;'>
+            <div class="col-6 p-0">
+              <img class="card-img p-0" src="{% static 'img/tracker/categories/Housing.svg' %}" style="height:150px;width:180px;margin-top:-2rem;padding-left:0;">
+            </div>
+            <div class="col-6 p-0">
+              <div class="">
+                <p class="lead pr-5"><b class="text-large">14 </b><span style="font-size:14px;"> Promises</span></p>
+                <p class="lead pt-0 pr-4"><b style="font-size:28px;">7% </b><span style="font-size:14px;"> Complete</span></p>
+              </div>
+            </div>
+          </div>
+
+          <div class="card-block border" style="background-color:#ededed;height:200px;width:320px;
+          margin-left:-10px;border-color:rgba(112, 112, 112, 0.2);">
+            <div class="d-flex flex-row">
+              <div class="justify-content-start" style="font-weight:300;">
+                <p class="pl-4"><b>1</b></p>
+                <p class="pl-4 pt-2 ml-5">Fulfilled</p>
+                <p class="pl-4"><b>0</b></p>
+                <p class="pt-2 pl-4 ml-5">In Progress</p>
+              </div>
+              <div class="justify-content-end offset-1"  style="font-weight:300;">
+                <p><b>13</b><br></p>
+                <p class="pt-2 pl-5">Unfulfilled</p>
+                <p><b>0</b><br></p>
+                <p class="pt-2 pl-4">Stalled</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="d-flex flex-row pb-3 pt-3">
+            <p class="pt-0 mr-auto">
+              <img src="{% static 'img/tracker/Share.svg' %}" height="15px" width="15px"> 
+              <span >Share</span></p>
+            <p class="pt-0"><img src="{% static 'img/tracker/Watch.svg' %}" height="15px" width="15px"> Watch</p>
+        </div>
+        </div>
+      </div>
+
+<!--third column-->
+      <div class="col-4">
+        <div class="card p-0" style="width:300px;margin:10px;color:#707070;">
+          <div class="d-flex flex-row" style='height:150px;'>
+            <div class="col-6 p-0">
+              <img class="card-img p-0" src="{% static 'img/tracker/categories/Jobs.svg' %}" style="height:150px;width:180px;margin-top:-2rem;padding-left:0;">
+            </div>
+            <div class="col-6 p-0">
+              <div class="">
+                <p class="lead pr-5"><b class="text-large">14 </b><span style="font-size:14px;"> Promises</span></p>
+                <p class="lead pt-0 pr-4"><b style="font-size:28px;">7% </b><span style="font-size:14px;"> Complete</span></p>
+              </div>
+            </div>
+          </div>
+
+          <div class="card-block border" style="background-color:#ededed;height:200px;width:320px;
+          margin-left:-10px;border-color:rgba(112, 112, 112, 0.2);">
+            <div class="d-flex flex-row">
+              <div class="justify-content-start" style="font-weight:300;">
+                <p class="pl-4"><b>1</b></p>
+                <p class="pl-4 pt-2 ml-5">Fulfilled</p>
+                <p class="pl-4"><b>0</b></p>
+                <p class="pt-2 pl-4 ml-5">In Progress</p>
+              </div>
+              <div class="justify-content-end offset-1"  style="font-weight:300;">
+                <p><b>13</b><br></p>
+                <p class="pt-2 pl-5">Unfulfilled</p>
+                <p><b>0</b><br></p>
+                <p class="pt-2 pl-4">Stalled</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="d-flex flex-row pb-3 pt-3">
+            <p class="pt-0 mr-auto">
+              <img src="{% static 'img/tracker/Share.svg' %}" height="15px" width="15px"> 
+              <span >Share</span></p>
+            <p class="pt-0"><img src="{% static 'img/tracker/Watch.svg' %}" height="15px" width="15px"> Watch</p>
+        </div>
+        </div>
+      </div>
+
+<!--second container start here-->
+<div class="container pt-5">
+  <div class="row pt-5">
+
+      <div class="col-4">
+        <div class="card p-0" style="width:300px;margin:10px;color:#707070;">
+          <div class="d-flex flex-row" style='height:150px;'>
+            <div class="col-6 p-0">
+              <img class="card-img p-0" src="{% static 'img/tracker/categories/Governance.svg' %}" style="height:150px;width:180px;margin-top:-2rem;padding-left:0;">
+            </div>
+            <div class="col-6 p-0">
+              <div class="">
+                <p class="lead pr-5"><b class="text-large">14 </b><span style="font-size:14px;"> Promises</span></p>
+                <p class="lead pt-0 pr-4"><b style="font-size:28px;">7% </b><span style="font-size:14px;"> Complete</span></p>
+              </div>
+            </div>
+          </div>
+
+          <div class="card-block border" style="background-color:#ededed;height:200px;width:320px;
+          margin-left:-10px;border-color:rgba(112, 112, 112, 0.2);">
+            <div class="d-flex flex-row">
+              <div class="justify-content-start" style="font-weight:300;">
+                <p class="pl-4"><b>1</b></p>
+                <p class="pl-4 pt-2 ml-5">Fulfilled</p>
+                <p class="pl-4"><b>0</b></p>
+                <p class="pt-2 pl-4 ml-5">In Progress</p>
+              </div>
+              <div class="justify-content-end offset-1"  style="font-weight:300;">
+                <p><b>13</b><br></p>
+                <p class="pt-2 pl-5">Unfulfilled</p>
+                <p><b>0</b><br></p>
+                <p class="pt-2 pl-4">Stalled</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="d-flex flex-row pb-3 pt-3">
+            <p class="pt-0 mr-auto">
+              <img src="{% static 'img/tracker/Share.svg' %}" height="15px" width="15px"> 
+              <span >Share</span></p>
+            <p class="pt-0"><img src="{% static 'img/tracker/Watch.svg' %}" height="15px" width="15px"> Watch</p>
+        </div>
+        </div>
+      </div>
+
+
+      <div class="col-4">
+        <div class="card p-0" style="width:300px;margin:10px;color:#707070;">
+          <div class="d-flex flex-row" style='height:150px;'>
+            <div class="col-6 p-0">
+              <img class="card-img p-0" src="{% static 'img/tracker/categories/Environment.svg' %}" style="height:150px;width:180px;margin-top:-2rem;padding-left:0;">
+            </div>
+            <div class="col-6 p-0">
+              <div class="">
+                <p class="lead pr-5"><b class="text-large">14 </b><span style="font-size:14px;"> Promises</span></p>
+                <p class="lead pt-0 pr-4"><b style="font-size:28px;">7% </b><span style="font-size:14px;"> Complete</span></p>
+              </div>
+            </div>
+          </div>
+
+          <div class="card-block border" style="background-color:#ededed;height:200px;width:320px;
+          margin-left:-10px;border-color:rgba(112, 112, 112, 0.2);">
+            <div class="d-flex flex-row">
+              <div class="justify-content-start" style="font-weight:300;">
+                <p class="pl-4"><b>1</b></p>
+                <p class="pl-4 pt-2 ml-5">Fulfilled</p>
+                <p class="pl-4"><b>0</b></p>
+                <p class="pt-2 pl-4 ml-5">In Progress</p>
+              </div>
+              <div class="justify-content-end offset-1"  style="font-weight:300;">
+                <p><b>13</b><br></p>
+                <p class="pt-2 pl-5">Unfulfilled</p>
+                <p><b>0</b><br></p>
+                <p class="pt-2 pl-4">Stalled</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="d-flex flex-row pb-3 pt-3">
+            <p class="pt-0 mr-auto">
+              <img src="{% static 'img/tracker/Share.svg' %}" height="15px" width="15px"> 
+              <span >Share</span></p>
+            <p class="pt-0"><img src="{% static 'img/tracker/Watch.svg' %}" height="15px" width="15px"> Watch</p>
+        </div>
+        </div>
+      </div>
+
+
+      <div class="col-4">
+        <div class="card p-0" style="width:300px;margin:10px;color:#707070;">
+          <div class="d-flex flex-row" style='height:150px;'>
+            <div class="col-6 p-0">
+              <img class="card-img p-0" src="{% static 'img/tracker/categories/Traffic Management.svg' %}" style="height:150px;width:180px;margin-top:-2rem;padding-left:0;">
+            </div>
+            <div class="col-6 p-0">
+              <div class="">
+                <p class="lead pr-5"><b class="text-large">14 </b><span style="font-size:14px;"> Promises</span></p>
+                <p class="lead pt-0 pr-4"><b style="font-size:28px;">7% </b><span style="font-size:14px;"> Complete</span></p>
+              </div>
+            </div>
+          </div>
+
+          <div class="card-block border" style="background-color:#ededed;height:200px;width:320px;
+          margin-left:-10px;border-color:rgba(112, 112, 112, 0.2);">
+            <div class="d-flex flex-row">
+              <div class="justify-content-start" style="font-weight:300;">
+                <p class="pl-4"><b>1</b></p>
+                <p class="pl-4 pt-2 ml-5">Fulfilled</p>
+                <p class="pl-4"><b>0</b></p>
+                <p class="pt-2 pl-4 ml-5">In Progress</p>
+              </div>
+              <div class="justify-content-end offset-1"  style="font-weight:300;">
+                <p><b>13</b><br></p>
+                <p class="pt-2 pl-5">Unfulfilled</p>
+                <p><b>0</b><br></p>
+                <p class="pt-2 pl-4">Stalled</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="d-flex flex-row pb-3 pt-3">
+            <p class="pt-0 mr-auto">
+              <img src="{% static 'img/tracker/Share.svg' %}" height="15px" width="15px"> 
+              <span >Share</span></p>
+            <p class="pt-0"><img src="{% static 'img/tracker/Watch.svg' %}" height="15px" width="15px"> Watch</p>
+        </div>
         </div>
       </div>
     </div>
-    <!--start of third card-->
-    <div class="col-4">
-      <div class="card p-0" style="width:300px;margin:10px;">
-        <div class="d-flex flex-row" style='height:150px;'>
-          <div class="justify-content-left">
-            <img class="card-img p-0" src="{% static 'img/tracker/categories/Jobs.svg' %}" style="height:150px;width:180px;margin-top:-3rem;padding-left:0;">
-          </div>
-          <div class="justify-content-right pt-3" >
-            <p class="text-small pr-2">14 Promises</p>
-            <p class="text-small pr-2">7% Complete</p>
-          </div>
-        </div>
-        <div class="card-block border" style="background-color:#ededed;height:200px;width:320px;margin-left:-10px;border-color:rgba(112, 112, 112, 0.2);">
-          <div class="flex-row d-flex pl-5">
-            <p class="pl-5">1<br> Fulfilled </p>
-            <p class="pl-5">13 <br> Unfufilled </p>
-          </div>
-          <div class="flex-row d-flex pl-5">
-            <p class="pl-5">0 <br> In Progress</p>
-            <p class="pl-4">0 <br> Stalled </p>
-          </div>
-        </div>
-        <div class="d-flex flex-row card-footer">
-          <p class="offset-1"><i class="fa fa-share-alt" aria-hidden="true">Share</i></p>
-          <p class="offset-4"><i class="fa fa-eye" aria-hidden="true">Watch</i></p>
-        </div>
-      </div>
+  </div>
     </div>
 </div>
+{% include 'blocks/info-card.html' %}
+{% include 'blocks/buttons.html' %}
+{% include 'blocks/newsletter.html' %}
+
   </div>
 </div>
 {% endblock %}
