--- a/wajibisha/templates/blocks/team.html
+++ b/wajibisha/templates/blocks/team.html
@@ -1,9 +1,9 @@
 {% load staticfiles %}
 <div class="showcase how-it-works text-center" style="height:;width:100%;">
   <div class="wrapper clearfix text-center">
-   <h2 style="color:#0067A3;">Team</h2>
+   <h3 style="color:#0067A3;">THE TEAM</h3>
    <!--start a first card group-->
-  <div class='team card-group'>
+  <div class='team pt-0 card-group'>
     <div class="team card text-center">
       <div class="card-body pl-0 pr-0">
         <img clas="card-img" src="{% static 'img/aboutus/team.png' %}">
